@@ -1,4 +1,8 @@
-(add new changes on top of this file)
+2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
+    * Removed deactivated code
+	* Added phpdoc documentation
+	* Added x4epersdb dependency
+
 2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
     * Merged x4euniprojects and x4euniprojectsgeneral
 
